[gd_scene load_steps=10 format=2]

[ext_resource path="res://Kart/Kart.gd" type="Script" id=1]
[ext_resource path="res://Assets/Carroza.material" type="Material" id=2]
[ext_resource path="res://Assets/kart.mesh" type="ArrayMesh" id=3]
[ext_resource path="res://Assets/wheel2.mesh" type="ArrayMesh" id=4]
[ext_resource path="res://Assets/wheel1.mesh" type="ArrayMesh" id=5]

[sub_resource type="SphereShape" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 1, 1, 0.207843 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 4 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.988235, 0.972549, 0.972549, 0.14902 )

[node name="Kart" type="Spatial"]
script = ExtResource( 1 )

[node name="Mesh" type="Spatial" parent="."]

[node name="Body" type="MeshInstance" parent="Mesh"]
transform = Transform( -2.62268e-09, 0.03, 1.09278e-09, 0, -1.31134e-09, 0.025, 0.06, 1.31134e-09, 4.77671e-17, 0, 0.074, 0.137 )
mesh = ExtResource( 3 )
material/0 = ExtResource( 2 )

[node name="WheelFR" type="Spatial" parent="Mesh"]
transform = Transform( -4.37114e-10, 0, -0.01, 0, 0.01, 0, 0.01, 0, -4.37114e-10, -0.25, 0.175, 0.4 )

[node name="Pivot" type="Spatial" parent="Mesh/WheelFR"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 3.8147e-06, 0, 20 )

[node name="WheelFR" type="MeshInstance" parent="Mesh/WheelFR/Pivot"]
transform = Transform( 1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, -3.8147e-06, 0, -20 )
mesh = ExtResource( 4 )
material/0 = null

[node name="WheelFL" type="Spatial" parent="Mesh"]
transform = Transform( -1.62921e-09, 0, 0.01, 0, 0.01, 0, -0.01, 0, -1.62921e-09, 0.25, 0.175, 0.4 )

[node name="Pivot" type="Spatial" parent="Mesh/WheelFL"]
transform = Transform( 0.999999, 0, -2.84217e-14, 0, 0.999999, 0, 2.84217e-14, 0, 0.999999, 3.8147e-06, 0, 20 )

[node name="WheelFL" type="MeshInstance" parent="Mesh/WheelFL/Pivot"]
transform = Transform( 1, 0, 1.42109e-14, 0, 1, 0, -1.42109e-14, 0, 1, 0, 0, -20 )
mesh = ExtResource( 4 )
material/0 = null

[node name="WheelRR" type="MeshInstance" parent="Mesh"]
transform = Transform( -4.37114e-10, 0, -0.01, 0, 0.01, 0, 0.01, 0, -4.37114e-10, -0.275, 0.175, -0.35 )
mesh = ExtResource( 4 )
material/0 = null

[node name="WheelRL" type="MeshInstance" parent="Mesh"]
transform = Transform( -2.8213e-09, 0, 0.01, 0, 0.01, 0, -0.01, 0, -2.8213e-09, 0.275, 0.175, -0.35 )
mesh = ExtResource( 4 )
material/0 = null

[node name="SteeringWheel" type="Spatial" parent="Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.51615, 0.451435 )

[node name="Pivot" type="Spatial" parent="Mesh/SteeringWheel"]
transform = Transform( 1, 0, 0, 0, -0.866026, 0.5, 0, -0.5, -0.866026, 0, 0, 0 )

[node name="WheelMesh" type="MeshInstance" parent="Mesh/SteeringWheel/Pivot"]
transform = Transform( 0.05, 0, 0, 0, 0.05, 9.31323e-10, 0, -1.86265e-09, 0.01, -0.0182633, -0.016453, -0.0710837 )
mesh = ExtResource( 5 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 8.4334e-08, -3.14739e-07, 0, 0.965926, 0.258819, 3.25841e-07, 0.258819, -0.965926, 0, 1.5, -2 )

[node name="Sphere" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
gravity_scale = 5.0
can_sleep = false
linear_damp = 0.75
angular_damp = 0.5

[node name="CollisionShape" type="CollisionShape" parent="Sphere"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Sphere"]
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )
